# open-learnix

./: .gitignore  LICENSE  README.md  docker-compose.concourse.yml  docker-compose.discussions.yml  docker-compose.keycloak.yml  docker-compose.learn.yml  docker-compose.mitxonline.yml  docker-compose.ol-network.yml  docker-compose.tools.yml  docker-compose.traefik.yml  docker-compose.tutor-hosts.yml  docker-compose.ue-apisix.yml  docker-compose.ue-traefik.yml  docker-compose.yml  flake.nix  pyproject.toml  shell.env
.github/workflows/: check.yml
apisix/: Dockerfile  docker-compose.yml  docker-entrypoint-extended.sh
apisix/conf/: apisix.yaml  config.yaml  debug.yaml
certs/: odl.local.crt  odl.local.key
config/dnsmasq.d/: odl.local.conf
config/jump/sites/: sites.json
config/traefik/: dynamic.yml  traefik.yml
db/: Dockerfile  docker-compose.yml  keycloak-dump.sql
db/scripts/: databases.yml  healthcheck.sh  init-databases.sh
devshells/: develop.nix  discussions.nix  keycloak-scim.nix  learn.nix  mit-learn.nix  mitxonline.nix  ol-django.nix  ol-infrastructure.nix  ol-keycloak.nix  ol.nix  release-script.nix
env/: apisix.env  keycloak.local.example.env
keycloak/: Dockerfile  create-keycloak-db.sql  docker-compose.yml  init-databases.sh
keycloak/realms/: ol-local.json
pkgs/: default.nix  nvfetcher.toml
pkgs/_sources/: generated.json  generated.nix
templates/: ol-network.base.yml
tools/: docker-compose.yml
tutor/: configure.sh
tutor/config/env/local/: docker-compose.override.yml  docker-compose.prod.override.yml
tutor/plugins/: ol_dev.py
